feat(EEJT-0007) added im memory cache for data from ecommerce (to reduce the number of requests and increase performance). Added e-commerce http-api/graphql.